--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<p>this is a new repo</p>
-<h1>yhis is a new feature</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cute Ducky 💖</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand&display=swap" rel="stylesheet" />
+</head>
+<body class="page1">
+  <div class="container">
+    <h1>Hello, Cutie 🐥</h1>
+    <p>Click the button below to see something sweet!</p>
+    <button onclick="goToFriendPage()">Please Click, Cute Ducky 🥺</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
